# lustre-experiments

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dd-tests.md  single_threaded_writer.md
include/lustre_include_patched/lustre/: liblustreapi.h  lustre_user.h  lustreapi.h
osts_tests/: lfs_gen_stripes.sh  lfs_num_osts.sh  slurm_par_gen_file.sh  slurm_par_read_file.sh  slurm_par_write_file.sh  srun_osts_par_read.sh  srun_osts_par_write.sh  srun_par_read.sh  srun_par_write.sh
scratch/: create.c  parallel_upload.cpp  read_tests.txt  utility.cpp  write.c
src/: create_file.cpp  genseq.cpp  odirect_test.cpp  print_layout.cpp  print_version.cpp  read_test.cpp  read_test_api.cpp  read_test_mt.cpp  simple_read_test.cpp  simple_write_test.cpp  write_test_mt.cpp
test/: genfiles.sh
